Adding info after doing practice problems.
A lot of research rabbit holes to fill out my Java knowledge more.

--- a/java/3rd Party Libraries.ipynb
+++ b/java/3rd Party Libraries.ipynb
@@ -822,10 +822,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55fa95a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30mimport org.apache.kafka.clients.producer.*;\u001b[0m",
+      "\u001b[1m\u001b[31mpackage org.apache.kafka.clients.producer does not exist\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "import org.apache.kafka.clients.producer.*;\n",
     "import org.apache.kafka.clients.consumer.*;\n",
@@ -891,6 +902,119 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf477808",
+   "metadata": {},
+   "source": [
+    "# AutoValue\n",
+    "\n",
+    "https://github.com/google/auto/tree/main/value\n",
+    "\n",
+    "`@AutoValue` annotation processed during build phase to __generate code__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0ebeaade",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mimport \u001b[0m\u001b[1m\u001b[30m\u001b[41mcom.google.auto.value.AutoValue\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mpackage com.google.auto.value does not exist\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import com.google.auto.value.AutoValue;\n",
+    "\n",
+    "@AutoValue\n",
+    "public abstract class Animal {\n",
+    "    public static Animal create(String name, int numberOfLegs) {\n",
+    "        return new AutoValue_Animal(name, numberOfLegs);\n",
+    "    }\n",
+    "\n",
+    "    public abstract String name();\n",
+    "    public abstract int numberOfLegs();\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Animal cat = Animal.create(\"Cat\", 4);\n",
+    "        System.out.println(cat.name() + \" has \" + cat.numberOfLegs() + \" legs.\");\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "76d7b06e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mimport \u001b[0m\u001b[1m\u001b[30m\u001b[41mcom.google.auto.value.AutoValue\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mpackage com.google.auto.value does not exist\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import com.google.auto.value.AutoValue;\n",
+    "\n",
+    "@AutoValue\n",
+    "public abstract class Person {\n",
+    "    public abstract String firstName();\n",
+    "    public abstract String lastName();\n",
+    "    public abstract int age();\n",
+    "\n",
+    "    public static Builder builder() {\n",
+    "        return new AutoValue_Person.Builder();\n",
+    "    }\n",
+    "\n",
+    "    @AutoValue.Builder\n",
+    "    public interface Builder {\n",
+    "        Builder firstName(String firstName);\n",
+    "        Builder lastName(String lastName);\n",
+    "        Builder age(int age);\n",
+    "        Person build();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Usage:\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Person person = Person.builder()\n",
+    "                              .firstName(\"John\")\n",
+    "                              .lastName(\"Doe\")\n",
+    "                              .age(30)\n",
+    "                              .build();\n",
+    "\n",
+    "        System.out.println(person.firstName());\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693642a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
