--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1152,7 +1152,9 @@
     "- The `StaticNestedClass` is the static nested class that has its own `staticNestedVariable`.\n",
     "- In the `main` method, an instance of the outer class is created (`outer`), and then an instance of the inner class is created using the outer class instance (`inner`).\n",
     "- The `display` method of the inner class is called, which prints the values of the outer and inner variables.\n",
-    "- The `display` method of the static nested class is called directly using the outer class name (`OuterClass.StaticNestedClass.display()`)."
+    "- The `display` method of the static nested class is called directly using the outer class name (`OuterClass.StaticNestedClass.display()`).\n",
+    "\n",
+    "Note: __Nested interfaces__ are automatically `static` because they can't be non-static like a nested class can."
    ]
   },
   {
@@ -1536,26 +1538,17 @@
     "\n",
     "__Restrictions__:\n",
     "- since no name, __no constructor__ (can use {} blocks instead)\n",
-    "- no way to specify multiple interfaces or an interface + a class"
+    "- no way to specify multiple interfaces or an interface + a class\n",
+    "\n",
+    "NOTE: the () means if the base class needs c'tor args, you an provide them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 193,
    "id": "acdbc35d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inside AnonymousClass\n",
-      "Inside AnonymousClass\n",
-      "Inside AnonymousClass\n",
-      "Inside ParentClass\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "interface MyInterface {\n",
     "    void display();\n",
@@ -2119,6 +2112,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bd35485",
+   "metadata": {},
+   "source": [
+    "# Interfaces Inheriting Interfaces\n",
+    "\n",
+    "An interface can __inherit multiple other__ interfaces.\n",
+    "\n",
+    "Then it's as if the class selected all of them for implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "7c9d5913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface MyInterface {\n",
+    "    public void f();\n",
+    "}\n",
+    "\n",
+    "interface MyOtherInterface extends MyInterface {\n",
+    "    public void g();\n",
+    "}\n",
+    "\n",
+    "class MyClass implements MyInterface {\n",
+    "    public void f() {}\n",
+    "    public void g() {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1e3770ba",
    "metadata": {},
    "source": [
@@ -2173,9 +2199,401 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da46e106",
+   "metadata": {},
+   "source": [
+    "# Deeper Dive Into Enums\n",
+    "\n",
+    "This is continued from the basics shown in __Variables__ notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776f5c5d",
+   "metadata": {},
+   "source": [
+    "## Conversions/Reflection (Simple Case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "cd1ea8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyEnum.values(): [VAL0, VAL1, VAL2]\n",
+      "As Object: VAL0\n",
+      "Instance of Enum: true\n",
+      "Constant Equals: true\n",
+      "Ordinal of VAL0: 0\n",
+      "Value for ordinal 0: VAL0\n",
+      "Ordinal of VAL0 from string: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "enum MyEnum {\n",
+    "    VAL0,\n",
+    "    VAL1,\n",
+    "    VAL2\n",
+    "}\n",
+    "\n",
+    "// This enum is illegal in Java.\n",
+    "// You can't just change the values like in C++\n",
+    "// unless you give a constructor!\n",
+    "/*\n",
+    "enum MyEnum2 {\n",
+    "    VAL0(1),\n",
+    "    VAL1(3)\n",
+    "}\n",
+    "*/\n",
+    "\n",
+    "public class EnumDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Getting the values\n",
+    "        MyEnum[] vals = MyEnum.values();\n",
+    "        // Values print as their exact names with no qualifier\n",
+    "        System.out.println(\"MyEnum.values(): \" + Arrays.toString(vals));\n",
+    "        \n",
+    "        // MyEnum is a reference type!\n",
+    "        // it automatically derives from java.lang.Enum!\n",
+    "        System.out.println(\"As Object: \" + (Object)vals[0]);\n",
+    "        System.out.println(\"Instance of Enum: \" + (vals[0] instanceof Enum));\n",
+    "        \n",
+    "        // MyEnum instances cannot be compared to numbers!\n",
+    "        // System.out.println(MyEnum.VAL0 == 0); // Error\n",
+    "        \n",
+    "        // Enum values are public static instances\n",
+    "        // You cannot instantiate a new instance of an enum yourself\n",
+    "        // This ensures that == will always work\n",
+    "        System.out.println(\"Constant Equals: \" + (MyEnum.VAL0 == vals[0]));\n",
+    "        // new MyEnum(); // Error\n",
+    "        \n",
+    "        // If you need to use numbers for some reason\n",
+    "        System.out.println(\"Ordinal of VAL0: \" + MyEnum.VAL0.ordinal());\n",
+    "        System.out.println(\"Value for ordinal 0: \" + MyEnum.values()[0]);\n",
+    "        \n",
+    "        // From string\n",
+    "        System.out.println(\"Ordinal of VAL0 from string: \" + Enum.valueOf(MyEnum.class, \"VAL0\").ordinal());\n",
+    "    }\n",
+    "}\n",
+    "EnumDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6321ac06",
+   "metadata": {},
+   "source": [
+    "## Conversions/Refletion (Complex Case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "e090daf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "values(): [VAL1, VAL5]\n",
+      "VAL1 ordinal: 0\n",
+      "VAL1 == VAL5: false\n",
+      "VAL5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "enum MyEnum {\n",
+    "    // Automatically public static final\n",
+    "    VAL1(1),\n",
+    "    VAL5(5);\n",
+    "    \n",
+    "    // Automatically private\n",
+    "    MyEnum(int n) {\n",
+    "        // Value ignored on purpose for demonstration purposes\n",
+    "    }\n",
+    "    \n",
+    "    // This kind of stuff is declared 'final' in Enum\n",
+    "    // public boolean equals(Object other ) {return false;} // Error\n",
+    "}\n",
+    "\n",
+    "enum MyEnum2 {\n",
+    "    VAL1(1),\n",
+    "    VAL5(5);\n",
+    "    \n",
+    "    private int n;\n",
+    "    \n",
+    "    MyEnum2(int n) {\n",
+    "        this.n = n;\n",
+    "    }\n",
+    "    \n",
+    "    public static MyEnum2 valueOf(int n) {\n",
+    "        for (MyEnum2 val : MyEnum2.values()) {\n",
+    "            if (val.n == n) {\n",
+    "                return val;\n",
+    "            }\n",
+    "        }\n",
+    "        return null; // Legal because reference type!\n",
+    "    }\n",
+    "    \n",
+    "    public int intValue() { return n; }\n",
+    "}\n",
+    "\n",
+    "public class EnumDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Only the existing values are included, not the ones in the gaps\n",
+    "        System.out.println(\"values(): \" + Arrays.toString(MyEnum.values()));\n",
+    "        \n",
+    "        // Ordinals are always in array order of values().\n",
+    "        // This is because they are not inherently integers\n",
+    "        // like in C++.  They can take whatever.\n",
+    "        System.out.println(\"VAL1 ordinal: \" + MyEnum.VAL1.ordinal());\n",
+    "        \n",
+    "        // Equality\n",
+    "        // Note that the fact that we had a c'tor allowed us to define values\n",
+    "        // in the constants.\n",
+    "        // But equality is reference equality, so == still works even if we\n",
+    "        // ignore that value.\n",
+    "        System.out.println(\"VAL1 == VAL5: \" + (MyEnum.VAL1 == MyEnum.VAL5));\n",
+    "        \n",
+    "        // Despite having a constructor, we still can't call it.\n",
+    "        // This makes the whole constants and == thing still work.\n",
+    "        // new MyEnum(10); // Error\n",
+    "        \n",
+    "        // If you want to specify a value separately from the ordinal,\n",
+    "        // you need custom logic like this.\n",
+    "        System.out.println(MyEnum2.valueOf(5));\n",
+    "        System.out.println(MyEnum2.VAL5.intValue());\n",
+    "    }\n",
+    "}\n",
+    "EnumDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8567b30",
+   "metadata": {},
+   "source": [
+    "## Hybrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "1e0a7184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enum MyEnum {\n",
+    "    VAL0,  // No values given (so no c'tor needed)\n",
+    "    VAL1;\n",
+    "    \n",
+    "    // Can still provide members just the same\n",
+    "    public void doSomething() {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b8672b0",
+   "metadata": {},
+   "source": [
+    "## Switch Exhaustivity\n",
+    "\n",
+    "This is not specific to enums and only applies to __switch expressions_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "c09cc69c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        int n = \u001b[0m\u001b[1m\u001b[30m\u001b[41mswitch(e) {\u001b[0m",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[41m            case VAL0 -> 5;\u001b[0m",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[41m        }\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mthe switch expression does not cover all possible input values\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "enum MyEnum {\n",
+    "    VAL0,\n",
+    "    VAL1\n",
+    "}\n",
+    "\n",
+    "public class EnumSwitchDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyEnum e = MyEnum.VAL0;\n",
+    "        \n",
+    "        // NOT ENFORCED\n",
+    "        switch (e) {\n",
+    "            case VAL0:\n",
+    "                System.out.println(\"Hi\");\n",
+    "                break;\n",
+    "        }\n",
+    "        \n",
+    "        // ENFORCED\n",
+    "        int n = switch(e) {\n",
+    "            case VAL0 -> 5;\n",
+    "        };\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "EnumSwitchDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac2f469a",
+   "metadata": {},
+   "source": [
+    "# Conflicting Access Levels\n",
+    "\n",
+    "You can __expose__ something from the base, but you cannot __unexpose__ anything because it wouldn't make sense."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "5b088273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Base {\n",
+    "    public void f() {}\n",
+    "    protected void g() {}\n",
+    "    private void h() {}\n",
+    "}\n",
+    "\n",
+    "class Dervied extends Base {\n",
+    "    //protected void f() {} // Error\n",
+    "    \n",
+    "    public void g() {}\n",
+    "    \n",
+    "    public void h() {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b9f4b0",
+   "metadata": {},
+   "source": [
+    "# Private Members are Non-Virtual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "b55c0d4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Derived\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Base {\n",
+    "    private void f() {\n",
+    "        System.out.println(\"Base\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Derived extends Base {\n",
+    "    public void f() {\n",
+    "        System.out.println(\"Derived\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Demo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Derived d = new Derived();\n",
+    "        Base b = new Base();\n",
+    "        \n",
+    "        d.f();\n",
+    "        // ((Derived)b).f(); // Error\n",
+    "    }\n",
+    "}\n",
+    "Demo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23c630fa",
+   "metadata": {},
+   "source": [
+    "# Signatures and Param Names\n",
+    "\n",
+    "Method signatures are unique by __name__ and __param types__, but __not param names__.\n",
+    "\n",
+    "As in this example, the same method can have different param names in interfaces, and still be considered the same method in the implementing class.  This is similar to how lambda param names don't have to match the interface or the method reference.\n",
+    "\n",
+    "Also, you cannot overload by only the param names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "79ea90dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface MyInterface {\n",
+    "    void f(int x);\n",
+    "    // void f(int y); // ERROR\n",
+    "}\n",
+    "\n",
+    "interface OtherInterface {\n",
+    "    void f(int z);\n",
+    "}\n",
+    "\n",
+    "class MyClass implements MyInterface, OtherInterface {\n",
+    "    public void f(int y) {\n",
+    "        System.out.println(\"hi\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Demo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyInterface m = new MyClass();\n",
+    "        m.f(10);\n",
+    "    }\n",
+    "}\n",
+    "Demo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c30c6d9",
+   "id": "88f38a9e",
    "metadata": {},
    "outputs": [],
    "source": []
