--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Array\n",
     "Summary:\n",
-    "In this code snippet, we demonstrate various aspects of working with arrays in Java. We start by declaring and initializing an array of integers. Then, we show how to access and modify elements of the array. Next, we demonstrate how to obtain the length of an array. After that, we iterate over the array using both a traditional for loop and an enhanced for loop (for-each loop). Finally, we sort the array using the `Arrays.sort()` method."
+    "In this code snippet, we demonstrate various aspects of working with arrays in Java. We start by declaring and initializing an array of integers. Then, we show how to access and modify elements of the array. Next, we demonstrate how to obtain the length of an array. After that, we iterate over the array using both a traditional for loop and an enhanced for loop (for-each loop). Finally, we sort the array using the `Arrays.sort()` method.\n",
+    "\n",
+    "NOTE: You __cannot skip or ommit__ items in an array initialization like in C++."
    ]
   },
   {
@@ -1106,7 +1108,9 @@
     "\n",
     "4. Finally, the list of strings is sorted based on string length using a custom `Comparator`. The sorted list is printed again.\n",
     "\n",
-    "The code showcases the usage of `Collections.sort()` for sorting collections and demonstrates both natural ordering and custom ordering using a `Comparator`."
+    "The code showcases the usage of `Collections.sort()` for sorting collections and demonstrates both natural ordering and custom ordering using a `Comparator`.\n",
+    "\n",
+    "Note: look for other methods like `Collections.shuffle()` which are useful."
    ]
   },
   {
@@ -1213,7 +1217,17 @@
     "- The `poll()` method is used to remove and return the front element of the queue.\n",
     "- The `isEmpty()` method is used to check if the queue is empty.\n",
     "\n",
-    "The code demonstrates the various operations on both the stack and the queue and prints the expected output for each operation."
+    "The code demonstrates the various operations on both the stack and the queue and prints the expected output for each operation.\n",
+    "\n",
+    "Note: for historical reasons:\n",
+    "- `Stack` is concrete\n",
+    "- `Queue` is an interface\n",
+    "    - `LinkedList`\n",
+    "    - `ArrayDeque`\n",
+    "    - `PriorityQueue`\n",
+    "- `Deque` is also an interface that looks much like `Queue` but also has methods like `addFirst`, `addLast`, etc.\n",
+    "    - `ArrayDeque`\n",
+    "    - `LinkedList`"
    ]
   },
   {
@@ -1301,6 +1315,63 @@
     "}\n",
     "\n",
     "StackAndQueueDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56d7fb9",
+   "metadata": {},
+   "source": [
+    "# PriorityQueue and Heaps\n",
+    "\n",
+    "- `PriorityQueue` is a __concrete type__\n",
+    "    - it acts like a queue but retrieves __smallest first__\n",
+    "- __minheap__ is synonymous with `PriorityQueue` (by default) and is how it's implemented\n",
+    "- __maxheap__ is the opposite and can be done with a __comparator__\n",
+    "- __order not guaranteed__, only priority\n",
+    "    - if you want multiple things taken into account (eg. insertion order), do a custom comparator that checks the fields in the order that's important to you and returns -1, 0, or 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "d1cc2c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.PriorityQueue;\n",
+    "import java.util.Comparator;\n",
+    "\n",
+    "public class HeapDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // minheap\n",
+    "        PriorityQueue<Integer> q = new PriorityQueue<>();\n",
+    "        q.add(10);\n",
+    "        q.add(1);\n",
+    "        q.add(5);\n",
+    "        \n",
+    "        System.out.println(q.poll());\n",
+    "        \n",
+    "        // maxheap\n",
+    "        PriorityQueue<Integer> qMax = new PriorityQueue<>(Comparator.reverseOrder());\n",
+    "        qMax.add(10);\n",
+    "        qMax.add(1);\n",
+    "        qMax.add(5);\n",
+    "        \n",
+    "        System.out.println(qMax.poll());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "HeapDemo.main(null);"
    ]
   },
   {
@@ -1844,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 99,
    "id": "eeead69a",
    "metadata": {},
    "outputs": [
@@ -1854,6 +1925,7 @@
      "text": [
       "Default integer array: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "Filled integer array: [42, 42, 42, 42, 42, 42, 42, 42, 42, 42]\n",
+      "Filled list: [42, 42, 42, 42, 42, 42, 42, 42, 42, 42]\n",
       "Filled list: [42, 42, 42, 42, 42, 42, 42, 42, 42, 42]\n"
      ]
     }
@@ -1871,9 +1943,13 @@
     "        Arrays.fill(arr, 42);\n",
     "        System.out.println(\"Filled integer array: \" + Arrays.toString(arr));\n",
     "        \n",
-    "        // List version\n",
+    "        // List version (immutable)\n",
     "        List<Integer> list = Collections.nCopies(10, 42);\n",
     "        System.out.println(\"Filled list: \" + list);\n",
+    "        \n",
+    "        // List version (mutable)\n",
+    "        List<Integer> list2 = new ArrayList<>(Collections.nCopies(10, 42));\n",
+    "        System.out.println(\"Filled list: \" + list2);\n",
     "    }\n",
     "}\n",
     "\n",
@@ -1916,9 +1992,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd0ce46f",
+   "metadata": {},
+   "source": [
+    "# Built-in Comparators\n",
+    "\n",
+    "`java.util.Comparator` (the functional interface for methods passed into sorting and such) has __static methods__ you can call to get comparators.\n",
+    "\n",
+    "- `Comparator.naturalOrder()`\n",
+    "    - defers to `Comparable<T>` interface of elements\n",
+    "- `Comparator.reverseOrder()`\n",
+    "    - opposite of `naturalOrder()`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63027a12",
+   "id": "0b94c8b0",
    "metadata": {},
    "outputs": [],
    "source": []
