--- a/java/Control Flow.ipynb
+++ b/java/Control Flow.ipynb
@@ -940,12 +940,16 @@
     "Both approaches achieve the same result, but the try-with-resources approach is more concise and less error-prone as it automatically handles the resource management. The traditional approach requires manual resource closing in the finally block.\n",
     "\n",
     "Expected output:\n",
-    "- The contents of the \"input.txt\" file will be printed to the console twice, once for each approach."
+    "- The contents of the \"input.txt\" file will be printed to the console twice, once for each approach.\n",
+    "\n",
+    "NOTE: unlike Python, the variable declared in a try-with-resources does not continue to live outside.  If you want to declare it outside, it must be __effectively final__ and then you pass it as `try(reader)`.\n",
+    "\n",
+    "NOTE: although you can handle exceptions from the try-with-resources, you are also allowed to let some propagate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "795ef33a",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1458,9 @@
     "4. String values: An empty string `\"\"` is considered false, while a non-empty string is considered true.\n",
     "5. Object reference: A null reference is considered false, while a non-null reference is considered true.\n",
     "\n",
-    "The code snippet declares variables of different data types and demonstrates their truthiness in boolean conditions using `if` statements. The expected outputs are mentioned as comments after each print statement."
+    "The code snippet declares variables of different data types and demonstrates their truthiness in boolean conditions using `if` statements. The expected outputs are mentioned as comments after each print statement.\n",
+    "\n",
+    "NOTE: __only boolean__ values may be used in conditionals directly!"
    ]
   },
   {
@@ -1554,9 +1560,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6dfa5bf3",
+   "metadata": {},
+   "source": [
+    "# Final in Loop Headers\n",
+    "\n",
+    "Although you can make a range-for loop variable final to prevent it from being reassigned, it is not standard practice.\n",
+    "\n",
+    "Notice that in the 2nd range-for below, the value can be reassigned, but on the next iteration, it resumes where it left off."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ec0ccc30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class LoopDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // ILLEGAL\n",
+    "        //for (final int x = 0; x < 10; x++) {\n",
+    "        \n",
+    "        // }\n",
+    "        \n",
+    "        int[] arr = {1, 2, 3};\n",
+    "        // LEGAL\n",
+    "        for (final int x : arr) {\n",
+    "            System.out.println(x);\n",
+    "        }\n",
+    "        \n",
+    "        // loop still works properly despite reassignment\n",
+    "        for (int x : arr) {\n",
+    "            System.out.println(x);\n",
+    "            x = 100;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "LoopDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f22f454",
+   "metadata": {},
+   "source": [
+    "# Built-in Exceptions\n",
+    "\n",
+    "### Java Built-in Exceptions\n",
+    "\n",
+    "Java provides a variety of built-in exceptions to cater to different error conditions. Below are some of the most commonly used built-in exceptions, with their fully-qualified names:\n",
+    "\n",
+    "1. **java.lang.Exception**: \n",
+    "   - The general class for exceptions that can be caught and handled. Many other exceptions are subclasses of this.\n",
+    "\n",
+    "2. **java.lang.RuntimeException**:\n",
+    "   - Represents exceptions that are caused by bad programming practices. \n",
+    "   - Subclasses include:\n",
+    "     - **java.lang.NullPointerException**: Thrown when the JVM attempts to use a null object reference.\n",
+    "     - **java.lang.IndexOutOfBoundsException**: Thrown when an index is out of range, e.g., accessing an array with an invalid index.\n",
+    "     - **java.lang.ArrayIndexOutOfBoundsException**: Thrown when an array is accessed with an index outside its bounds.\n",
+    "     - **java.lang.StringIndexOutOfBoundsException**: Similar to ArrayIndexOutOfBoundsException but for strings.\n",
+    "     - **java.lang.IllegalArgumentException**: Thrown when a method receives an argument formatted differently than the method expects.\n",
+    "     - **java.lang.ArithmeticException**: Thrown when exceptional arithmetic conditions, such as division by zero, occur.\n",
+    "\n",
+    "3. **java.io.IOException**: \n",
+    "   - Represents an I/O exception of some kind. \n",
+    "   - Subclasses include:\n",
+    "     - **java.io.FileNotFoundException**: Thrown during a file reading operation when the specified file doesn't exist.\n",
+    "     - **java.io.EOFException**: Thrown when reaching the end of a file unexpectedly.\n",
+    "\n",
+    "4. **java.lang.ClassNotFoundException**: \n",
+    "   - Thrown when the JVM can't find a class that your code refers to.\n",
+    "\n",
+    "5. **java.lang.CloneNotSupportedException**: \n",
+    "   - Thrown by the `clone()` method when an object's class doesn't support cloning.\n",
+    "\n",
+    "6. **java.lang.NoSuchMethodException**: \n",
+    "   - Thrown when accessing a method that doesn't exist.\n",
+    "\n",
+    "7. **java.lang.InterruptedException**: \n",
+    "   - Thrown when a thread is interrupted, such as by another thread calling `interrupt()` on it.\n",
+    "\n",
+    "8. **java.lang.NoSuchFieldException**: \n",
+    "   - Thrown when accessing a class field that doesn't exist.\n",
+    "\n",
+    "9. **java.lang.NumberFormatException**: \n",
+    "   - Thrown when trying to convert a string to a numeric type but the format of the string is inappropriate.\n",
+    "   - NOTE: this is actually __unchecked__ (extends `RuntimeException`)\n",
+    "\n",
+    "10. **java.lang.UnsupportedOperationException**: \n",
+    "   - Thrown when an operation isn't supported, often when calling an optional method in a collection or stream that doesn't have an implementation for it.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Remember, this list is not exhaustive. The Java Standard Library provides many more specific exceptions for various scenarios."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bd6ca5f",
+   "id": "b0726ce6",
    "metadata": {},
    "outputs": [],
    "source": []
