--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -262,7 +262,7 @@
    "metadata": {},
    "source": [
     "# Variadic Functions\n",
-    "In Java, a variadic function is a function that can accept a variable number of arguments of the same type. The ellipsis (`...`) notation is used to denote a variadic parameter in the function signature. The parameter can be treated as either an array or as multiple arguments.\n",
+    "In Java, a variadic function is a function that can accept a variable number of arguments of the same type. The ellipsis (`...`) notation is used to denote a variadic parameter in the function signature. The parameter can be treated as either an array or as multiple arguments. Arguments can be ommitted in the call, giving you an __empty array__.\n",
     "\n",
     "In the code snippet, we have defined two variadic functions: `sum` and `concatenate`. The `sum` function takes a variable number of integers and returns their sum. The `concatenate` function takes a variable number of strings and concatenates them into a single string.\n",
     "\n",
@@ -761,9 +761,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb863d09",
+   "metadata": {},
+   "source": [
+    "# Final Parameters\n",
+    "\n",
+    "This is allowed and works as you'd expect, but it's __uncommon__ because it only affects the local variables in the function.  The objects they reference can still be modified."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4b2b15f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass {\n",
+    "    void f(final String s, final int x) {\n",
+    "        //s = \"hi\";\n",
+    "        //x = 5;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c78c0f",
+   "id": "f226ff35",
    "metadata": {},
    "outputs": [],
    "source": []
