--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -603,7 +603,9 @@
     "\n",
     "`List<Integer> l = new ArrayList<>();`\n",
     "- empty <> on right side of equality lets type be inferred\n",
-    "- even though the generic is not exactly the same on both sides"
+    "- even though the generic is not exactly the same on both sides\n",
+    "- this works in __other scenarios__ too, such as passing into a method, inferring `List<List<>>` as `List<>`, etc.\n",
+    "- it only works for __creating instances__, not for function calls"
    ]
   },
   {
@@ -800,9 +802,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36ac3d5b",
+   "metadata": {},
+   "source": [
+    "# Comparing Elements\n",
+    "\n",
+    "- T must extend a specific number type to use the operators\n",
+    "    - then Java automatically calls members like `intValue()` to do the math\n",
+    "    - this is a sort of exception to the lack of operator overloading\n",
+    "        - you can't extend Integer to get overloading though - it's marked `final`\n",
+    "- extending `Number` is not good enough\n",
+    "- better way is to use `T extends Comparable<T>` and call `compareTo()`\n",
+    "    - negative for less, 0 for equal, positie for greater\n",
+    "    - the boxed types implement this interface, and so can you\n",
+    "- also note the syntax for extending `Comparable`\n",
+    "    - the type constraint is self-referencial to the T that it's binding, which is ok\n",
+    "    - for instance, `Integer` implements `Comparable<Integer>`, so the constraint is satisified by `Integer`\n",
+    "    - it is not recommended to use `T exenteds Comparable` with no type arg as this gets the unbound version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "c9615e15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "// ILLEGAL: Number cannot be operated on with <\n",
+    "/*\n",
+    "class MyClass<T extends Number> {\n",
+    "    boolean compare(T t1, T t2) {\n",
+    "        return t1 < t2;\n",
+    "    }\n",
+    "}\n",
+    "*/\n",
+    "\n",
+    "// LEGAL: Java knows to call intValue() on t1 and t2\n",
+    "//        for this.\n",
+    "class MyClass<T extends Integer> {\n",
+    "    boolean compare(T t1, T t2) {\n",
+    "        return t1 < t2;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// LEGAL and RECOMMENDED:\n",
+    "// now objects can specify their own comparison.\n",
+    "class MyClass2<T extends Comparable<T>> {\n",
+    "    boolean compare(T t1, T t2) {\n",
+    "        return t1.compareTo(t2) < 0;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass<Integer> m = new MyClass();\n",
+    "        MyClass2<Integer> m2 = new MyClass2();\n",
+    "        \n",
+    "        // Notice boxing worked in both cases.\n",
+    "        System.out.println(m.compare(10, 15));\n",
+    "        System.out.println(m2.compare(10, 15));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90b4f13c",
+   "metadata": {},
+   "source": [
+    "# Subclass as Superclass Type Arg\n",
+    "\n",
+    "Just like in C++, this is fine.  I haven't tried using the subclass as a wildcard within the base class because that would seem a really bad thing to do anyway.\n",
+    "\n",
+    "`class MyClass implements Comparable<MyClass> {}`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3247e090",
+   "metadata": {},
+   "source": [
+    "# Static Member in Generic Class\n",
+    "\n",
+    "A static method is considered to live on the unbound class instead of the one with the type argument, so you have to treat it as a __generic method__ on its own."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "86c488f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass<T> {\n",
+    "    static <T> MyClass<T> factory() {\n",
+    "        return new MyClass<T>();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass<Integer> m = MyClass.<Integer>factory();\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a5963a6",
+   "metadata": {},
+   "source": [
+    "# Nestsed Class in Generic Class\n",
+    "\n",
+    "Because a `static` nested class doesn't have access to the enclosing class data, it follows the same rule as `static` methods (referenced via the __unbdound__ type).\n",
+    "\n",
+    "Non-static nested classes, on the other hand, belong to the bounded type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "7e295103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass<T> {\n",
+    "    static class MyChild {\n",
+    "    }\n",
+    "    \n",
+    "    class MyOtherChild {\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass.MyChild m = new MyClass.MyChild();\n",
+    "        MyClass<Integer> n = new MyClass();\n",
+    "        MyClass<Integer>.MyOtherChild o = n.new MyOtherChild();\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c76ae2b",
+   "id": "feb849f2",
    "metadata": {},
    "outputs": [],
    "source": []
