--- a/java/Recent Versions.ipynb
+++ b/java/Recent Versions.ipynb
@@ -400,6 +400,8 @@
     "##### Switch Expressions\n",
     "Java 12 introduced a new syntax for switch statements called switch expressions. It allows us to use switch statements as expressions, which means we can assign the result of a switch statement to a variable. In the code snippet, we demonstrate the usage of switch expressions to determine the day name based on the day of the week.\n",
     "\n",
+    "NOTE: switch expressions must be __exhausitive__ because otherwise the compiler doesn't know what to return for unknown values.\n",
+    "\n",
     "##### Compact Number Formatting\n",
     "Java 12 introduced a new way to format numbers in a compact form. We can use underscores (_) to separate digits in numeric literals, making them more readable. In the code snippet, we demonstrate the usage of compact number formatting to format a large number.\n",
     "\n",
