--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -85,6 +85,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6525d7d",
+   "metadata": {},
+   "source": [
+    "# User Input\n",
+    "\n",
+    "The above way with `System.console()` doesn't work in either jupyter or in environments like HackerRank.\n",
+    "\n",
+    "This is the __more idiomiatic__ and resilient way to do it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "16371618",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: 100\n",
+      "3\n",
+      "100\n",
+      "Please enter numbers separated by space: 10   100  7  \n",
+      "[10, 100, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.io.BufferedReader;\n",
+    "import java.io.InputStreamReader;\n",
+    "import java.util.stream.Stream;\n",
+    "import static java.util.stream.Collectors.toList;\n",
+    "\n",
+    "public class UserInput {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Note the lack of newline\n",
+    "        System.out.print(\"Please enter a number: \");\n",
+    "        \n",
+    "        try (BufferedReader reader = new BufferedReader(new InputStreamReader(System.in))) {\n",
+    "            String in = reader.readLine(); // Starts on current line and then goes to newline\n",
+    "            System.out.println(in.length()); // Includes spaces but not newline\n",
+    "            \n",
+    "            // Parsing\n",
+    "            int n = Integer.parseInt(in.trim());\n",
+    "            System.out.println(n);\n",
+    "            \n",
+    "            // Multiple Values from Line\n",
+    "            System.out.print(\"Please enter numbers separated by space: \");\n",
+    "            in = reader.readLine();\n",
+    "            List<Integer> vals = Stream.of(in.trim()\n",
+    "                                    .split(\"\\\\s+\"))\n",
+    "                                    .map(Integer::parseInt)\n",
+    "                                    .collect(toList());\n",
+    "            System.out.println(vals);\n",
+    "        }\n",
+    "        catch (IOException e) {\n",
+    "            System.out.println(e);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "UserInput.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86366539",
    "metadata": {},
    "source": [
@@ -183,7 +250,9 @@
     "1. `BufferedWriter` directly writes text to a file.\n",
     "1. `BufferedReader` has various ways to read, one of which is a stream of lines that you can itereate functionally.\n",
     "1. `OutputStream` is similiar but for binary.\n",
-    "1. `InputStream` is similar but for binary."
+    "1. `InputStream` is similar but for binary.\n",
+    "\n",
+    "Note: there is also `FileReader` and `FileWriter` that take paths, which looks more like how you do __User Input__ above."
    ]
   },
   {
