--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -677,13 +677,17 @@
     "7. Printing with escape characters like `\\\"` and `\\\\`.\n",
     "8. Printing special characters like tab, new line, carriage return, and bell sound.\n",
     "9. Printing with concatenation using the `+` operator.\n",
+    "10. Printing blank lines with the empty overload of `System.out.println`\n",
+    "    - useful for terminating `print` and `printf` lines\n",
     "\n",
-    "By understanding these concepts, you can effectively print output in Java and format it according to your requirements."
+    "By understanding these concepts, you can effectively print output in Java and format it according to your requirements.\n",
+    "\n",
+    "Note: `println` is not variadic!  It is overloaded for a lot of single types and `Object`, and empty."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "d54f6ace",
    "metadata": {},
    "outputs": [
@@ -700,7 +704,10 @@
       "This is a backslash: \\\n",
       "This is a tab:\t\tThis is a new line:\n",
       "This is a bell sound:\u0007urn:\n",
-      "Full Name: John Doe\n"
+      "Full Name: John Doe\n",
+      "\n",
+      "Hi, there\n",
+      "Hello!\n"
      ]
     }
    ],
@@ -719,11 +726,11 @@
     "        String name = \"John\";\n",
     "        int score = 85;\n",
     "        System.out.printf(\"Name: %s, Score: %d%n\", name, score); // Name: John, Score: 85\n",
-    "\n",
+    "        \n",
     "        // Formatting numbers\n",
     "        double pi = 3.14159;\n",
     "        System.out.printf(\"Pi: %.2f%n\", pi); // Pi: 3.14\n",
-    "\n",
+    "        \n",
     "        // Printing with line breaks\n",
     "        System.out.print(\"This is the first line.\\nThis is the second line.\"); \n",
     "        // This is the first line.\n",
@@ -745,6 +752,12 @@
     "        String firstName = \"John\";\n",
     "        String lastName = \"Doe\";\n",
     "        System.out.println(\"Full Name: \" + firstName + \" \" + lastName); // Full Name: John Doe\n",
+    "        \n",
+    "        // Printing blank lines (or going to next line)\n",
+    "        System.out.println();\n",
+    "        System.out.print(\"Hi, there\");\n",
+    "        System.out.println();\n",
+    "        System.out.println(\"Hello!\");\n",
     "    }\n",
     "}\n",
     "\n",
@@ -892,6 +905,128 @@
     "}\n",
     "\n",
     "RegularExpressionsDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321eeada",
+   "metadata": {},
+   "source": [
+    "# Regular Expressions via String\n",
+    "\n",
+    "- `replace` (in both str and char variants) is __not regex__ operation\n",
+    "- `replaceAll` and `replaceFirst` __are regex__ operations\n",
+    "- `matches` checks if the __whole string__ matches the given regex\n",
+    "- `split` also takes a __regex__\n",
+    "\n",
+    "Note: there are equivalents to these operations in a __compiled regex pattern__ object as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "985718fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc___def___ghi\n",
+      "abc___def ghi\n",
+      "abc___def___ghi\n",
+      "abc-def-ghi\n",
+      "false\n",
+      "[abc, def, ghi]\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class RegexDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"abc def ghi\";\n",
+    "        \n",
+    "        // Regex\n",
+    "        System.out.println(s.replaceAll(\"\\\\s\", \"___\"));\n",
+    "        \n",
+    "        // Regex\n",
+    "        System.out.println(s.replaceFirst(\"\\\\s\", \"___\"));\n",
+    "        \n",
+    "        // Not Regex\n",
+    "        System.out.println(s.replace(\" \", \"___\"));\n",
+    "        \n",
+    "        // Not Regex (character)\n",
+    "        System.out.println(s.replace(' ', '-'));\n",
+    "        \n",
+    "        // Regex (match check)\n",
+    "        System.out.println(s.matches(\"\\\\S+\\\\s+\"));\n",
+    "        // Expected Output: false (because not full match)\n",
+    "        \n",
+    "        // Regex\n",
+    "        System.out.println(Arrays.toString(s.split(\"\\\\s\")));\n",
+    "    }\n",
+    "}\n",
+    "RegexDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5663cc7",
+   "metadata": {},
+   "source": [
+    "# Splitting Strings\n",
+    "\n",
+    "- `split()` takes a __regex__, but if you pass a literal character, that is technically still a regex and will work\n",
+    "- `split()` returns a `String[]` (not a list)\n",
+    "- the split sequence is __not included in chunks__\n",
+    "- each occurence of split sequence marks a division (think of as comma)\n",
+    "    - and the occurence used to split is swallowed\n",
+    "- empty strings can occur within the array, but not at the end\n",
+    "- `\\\\s+` is super useful as it will remove all whitespace including newlines and tabs and multiple occurences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "57bbd2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treating split regex as literal: \n",
+      "[abc\tdef, ghi, , \t\n",
+      "jkl]\n",
+      "4\n",
+      "\n",
+      "Treating as regex: \n",
+      "[abc, def, ghi, , , , jkl]\n",
+      "7\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class SplitDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"abc\\tdef ghi  \\t\\njkl  \";\n",
+    "        String[] res = null;\n",
+    "        \n",
+    "        System.out.println(\"Treating split regex as literal: \");\n",
+    "        res = s.split(\" \");\n",
+    "        System.out.println(Arrays.toString(res));\n",
+    "        System.out.println(res.length);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(\"Treating as regex: \");\n",
+    "        res = s.split(\"\\\\s\");\n",
+    "        System.out.println(Arrays.toString(res));\n",
+    "        System.out.println(res.length);\n",
+    "        System.out.println();\n",
+    "    }\n",
+    "}\n",
+    "SplitDemo.main(null);"
    ]
   },
   {
@@ -1217,9 +1352,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a08cd61",
+   "metadata": {},
+   "source": [
+    "# Sorting a String\n",
+    "\n",
+    "You have to convert to a `char[]` and back.\n",
+    "\n",
+    "`Arrays.sort()` has a __lot of overloads__ including ranges, comparators, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "8b128c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdef\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class SortDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"fedcba\";\n",
+    "        char[] arr = s.toCharArray();\n",
+    "        Arrays.sort(arr);\n",
+    "        String t = new String(arr);\n",
+    "        \n",
+    "        System.out.println(t);\n",
+    "    }\n",
+    "}\n",
+    "SortDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee4d3029",
+   "metadata": {},
+   "source": [
+    "# Line Endings\n",
+    "\n",
+    "- just using `\\n` mostly works fine\n",
+    "- if need system-dependent line separator, use `System.lineSeparator()`\n",
+    "- file readers are resilient to differences in line endings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c98ecbf0",
+   "metadata": {},
+   "source": [
+    "# Custom Object in Format String\n",
+    "\n",
+    "Use `%s` specifier, and its `toString()` will be used."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60dad8a",
+   "id": "bc5e7581",
    "metadata": {},
    "outputs": [],
    "source": []
