--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -497,7 +497,9 @@
     "\n",
     "The `Color` enum demonstrates the usage of strongly-typed values. Each enum constant (`RED`, `GREEN`, `BLUE`) has an associated name and hex code. The `getName()` and `getHexCode()` methods return the name and hex code associated with each enum constant.\n",
     "\n",
-    "The code also demonstrates how to declare and use enums. It prints the values and associated properties of each enum type. Additionally, it shows how to iterate over all the enum values using the `values()` method."
+    "The code also demonstrates how to declare and use enums. It prints the values and associated properties of each enum type. Additionally, it shows how to iterate over all the enum values using the `values()` method.\n",
+    "\n",
+    "Note: because enums are so complex and are essentially just weird classes, they are further covered in the __Classes__ notebook."
    ]
   },
   {
@@ -2111,9 +2113,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dfed284",
+   "metadata": {},
+   "source": [
+    "# Multiple Variables in One Line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "959d17cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class VariableDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int x = 5, y = 10;\n",
+    "        final int z, a;\n",
+    "        \n",
+    "        a = 10;\n",
+    "        // a = 20;  // Error\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38dff26",
+   "id": "eb1f418c",
    "metadata": {},
    "outputs": [],
    "source": []
