--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "d900c44c",
    "metadata": {},
    "outputs": [],
@@ -414,9 +414,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a52fe253",
+   "metadata": {},
+   "source": [
+    "# Other Good Things to Know\n",
+    "\n",
+    "- `import java.util.*` will __Not__ let you do `stream.Stream` unqualified\n",
+    "    - only the immediate classes within `util` were imported\n",
+    "- `import static java.util.*` is not legal\n",
+    "- `import static java.util.stream.Collector` is not legal\n",
+    "- `import static java.util.stream.Collector.*` is legal!\n",
+    "    - you can import all static member of a class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538f272a",
+   "id": "1625d64d",
    "metadata": {},
    "outputs": [],
    "source": []
